<resources>
    <!-- Titles -->
    <string name="app_name">Gaia</string>
    <string name="loginActivity"> Login </string>
    <string name="timeReadActivityName"> History Search </string>
    <string name="lastReadActivityName"> Last Reading </string>
    <string name="compareActivityName"> Compare </string>
    <string name="ResultsActivity"> Results </string>
    <string name="SettingsActivity"> Settings </string>

    <!-- Home -->
    <string name="serviceText"> Notify </string>
    <string name="today"> Last read </string>
    <string name="yesterday"> Yesterday Consume </string>
    <string name="todayParameter"> Power </string>
    <string name="yesterdayParameter"> Consumption </string>
    <string name="yesterdayCO2"> CO<sub>2</sub> </string>
    <string name="yesterdayEuro"> Euro </string>


    <!-- Login -->
    <string name="actionLogout"> Logout </string>
    <string name="btLogin"> Login </string>
    <string name="btCancelLogin"> Cancel </string>
    <string name="loginEditStation"> Station </string>
    <string name="loginEditUser"> User </string>
    <string name="loginEditPassword"> Password </string>
    <string name="loginRedirect"> Redirecting&#8230; </string>
    <string name="failed"> Login failed&#8230; </string>
    <string name="userPassIncorrect"> Username/Password is incorrect </string>
    <string name="noDataInsert"> Please enter username and password </string>

    <!--connection-->
    <string name="text_toast_net_ok">You are connected! </string>
    <string name="text_toast_net_error">Problem with Internet Connection! </string>
    <string name="text_toast_net_slow">Maybe the connection is too slowly…</string>
    <string name="text_toast_no_data">No data received!</string>
    <string name="abstractToastCountPre"> Received  </string>
    <string name="abstractToastCountPost">  results </string>

    <!-- Last and Time reading -->
    <string name="tvSelectMeter">Sensor</string>
    <string name="tvSelectSensor">Parameter</string>
    <string name="btRead"> Read </string>
    <string name="btReadSensor"> Read Sensor </string>
    <string name="btCompareConsume"> Compare Consume </string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="btDate">Date</string>
    <string name="btHour">Hour</string>


    <!-- LinearGraph -->
    <string name="average">Average:</string>
    <string name="tvDisplayMin">Min</string>
    <string name="tvDisplayMax">Max</string>
    <string name="dataError"> NO DATA </string>
    <string name="rangeTime"> Time </string>


    <!-- Cake Graph -->
    <string name="other">Other</string>
    <string name="cakeTot"> Total </string>


    <!-- Descriptions -->
    <string name="descriptionTimeRead"> Displays Parameter values of  Meter in the selected time range </string>
    <string name="descriptionLastRead"> Displays the last value read from the selected meter related to the selected parameter  </string>
    <string name="descriptionCompare"> Displays Average or consume of parameter in the selected time range for all the range  </string>
    <string name="descriptionCake"> Click on slice for look inside </string>


    <!-- Service -->
    <string name="service_description"> Gaia service background: check the light value in realTime</string>


    <!-- Display Error Activity -->

    <string name="badTimeSelection"> Time Range selected not valid </string>
    <string name="DisplayErrorActivityLabel"> Problem Detected </string>
    <string name="tvDescription">Average of the last three lectures</string>
    <string name="tvAvgActPowerValue">Active Power</string>
    <string name="tvAvgLightValue">Light</string>
    <string name="pref_service">Background Service attivation</string>
    <string name="tvDisplayErrorActivityMeter"> Hall </string>
    <string name="tv_display_error_act_problem"> Problem Detected </string>
    <string name="suggestedSolustion"> Suggested solution </string>


    <!-- notification message .................................................... -->

    <string name="tickerTextAlarm"> There is a problem </string>

    <!-- Type of error -->
    <string name="errorTooConsume"> Too Consume </string>
    <string name="errorTooLowLight"> Too Low Light </string>
    <string name="errorIntruderAlarm"> Intruder Alarm </string>
    <string name="errorTooWasteful"> Too waste of Power </string>

    <!-- Action suggested -->
    <string name="suggTooConsume"> Check if there is a problem </string>
    <string name="suggTooLowLight"> Try to switch ON the light </string>
    <string name="suggIntruderAlarm"> there is a strange energy spike, evaluate if to call the police </string>
    <string name="suggTooWasteful"> There is too much power for the light readed, try to Switch OFF the light </string>


    <!-- ........................................................................... -->


    <!--  sensor list -->
    <string name="ssreactcon">Reactive Energy</string>
    <string name="ssapcon">Apparent Energy</string>
    <string name="sscon">Active Energy</string>
    <string name="ssactpw">Active Power</string>
    <string name="sspwf">Power Factor</string>
    <string name="sscur1">Current (F1)</string>
    <string name="sscur2">Current (F2)</string>
    <string name="sscur3">Current (F3)</string>
    <string name="ssappw">Apparent Power</string>
    <string name="ssreactpw">Reactive Power</string>
    <string name="sstemp">Temperature</string>
    <string name="sslight">Light</string>
    <string name="sshumid">Humidity</string>


    <!-- meter list -->
    <string name="mm_gf_labslighting">Laboratories Illuminations</string>
    <string name="mm_1f_roomslighting">1 floor Land Surv. rooms illumination</string>
    <string name="mm_qs">Sports block</string>
    <string name="mm_qg">Land Surveyors Block</string>
    <string name="mm_geom_gf">Floor 0 Land Surveyors</string>
    <string name="mm_geom_1f">Floor 1 Land Surveyors</string>
    <string name="mm_geom_gf_labsmotionpower">Land. Surv. Laboratories driving force </string>
    <string name="mm_qg_hall_lighting">Hall</string>


    <!-- meter list for cake legend name-->
    <string name="cake_gf_labslighting">Laboratories Illuminations</string>
    <string name="cake_1f_roomslighting">Rooms illumination</string>
    <string name="cake_qs">Sports block</string>
    <string name="cake_qg">Land Surveyors Block</string>
    <string name="cake_geom_gf">Floor 0 Land Surveyors</string>
    <string name="cake_geom_1f">Floor 1 Land Surveyors</string>
    <string name="cake_geom_gf_labsmotionpower">Laboratories driving force </string>
    <string name="cake_qg_hall_lighting">Hall</string>


    <!-- meter url -->
    <string name="urlQG">QG</string>
    <string name="urlQS">QS</string>
    <string name="urlQGHallLighting">QG/Lighting</string>
    <string name="urlGeomGF">Geom/GF</string>
    <string name="urlGeomFirstFloor">Geom/1F</string>
    <string name="urlGeomLabsMP">Geom/GF/Labs/MP</string>
    <string name="urlGeomRoomsLighting">Geom/1F/Rooms/Lighting</string>
    <string name="urlGeomLabsLighting">Geom/GF/Labs/Lighting</string>


    <!-- url -->
    <string name="urlDomainAddress">https://live.netsens.it/export/xml_export_2A.php?</string>
    <string name="user">user=</string>
    <string name="pass">&amp;password=</string>
    <string name="station">&amp;station=</string>
    <string name="m">&amp;meter=</string>
    <string name="lr">/last_reading</string>
    <string name="f">&amp;from=</string>
    <string name="t">&amp;to=</string>

    <string name="urlUserTemp">temp</string>
    <string name="urlPasswordTemp">5lkz1d</string>
    <string name="urlStationTemp">723</string>




    <!-- Settings -->
    <string name="settingsRestoreComplete"> Value restored </string>
    <string name="settingsSaveError"> Current value is not accepted </string>
    <string name="settingsSaveComplete"> Save completed </string>
    <string name="settingsBtRestore"> Restore </string>
    <string name="settingsBtSave"> Save </string>
    <string name="settingsParameterPreference"> Parameter Preferences </string>
    <string name="settingsSwitchPreference"> Notify Preferences </string>
    <string name="settingsAccounInfo"> Account Info </string>
    <string name="settingsEuro">Euro for kWh</string>
    <string name="settingsCO2">CO<sub>2</sub>Kg for kWh</string>
    <string name="settingsServiceRepeat">Control data every</string>
    <string name="settingsbackPressed"> Please insert your credentials or close the app </string>

    <string-array name="selectClockNotify">
        <item>30 sec (test)</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
    <string name="action_sign_in">Login</string>


</resources>