<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_time_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <!--FROM selection -->

    <!--TO selection -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btTimeRead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btRead"
            android:onClick="read" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/tvSelectMeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <Spinner
            android:id="@+id/MeterSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/tvSelectSensor"
            android:layout_width="0dp"
            android:layout_weight="0.42"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <Spinner
            android:id="@+id/SensorSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btFromDate"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDate" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btFromHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btHour" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/to" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDate" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btToHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btHour" />
    </LinearLayout>


</RelativeLayout>
