<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_compare"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.francesco.myfirstapp.ActivityCompare">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btFromDate"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDate" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btFromHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btHour" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/to" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDate" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btToHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btHour" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp">

        <Button
            android:id="@+id/btCompare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btCompareConsume"
            android:onClick="compareConsume" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/tvSelectSensor"
            android:layout_width="0dp"
            android:layout_weight="0.42"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <Spinner
            android:id="@+id/compareSensorSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp" />
    </LinearLayout>

</RelativeLayout>
