<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_time_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <!-- TODO ??    Posso inserire la data (o l'ora) selezionata al posto del NOME del bottone?? risparmio la textview e viene più intuitivo !!
        TODO       potrei far modificare runtime il NOME (inserendo la date selezionata (o l'ora) e
        TODO          FARE IL BOTTONE ROSSO SE LE DATE SELEZIONATE DANNO GET VUOTA O VERDE SE LA SELEZIONE è OK -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/tvSelectMeter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/textView" />

        <Spinner
            android:id="@+id/MeterSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="164dp"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/tvSelectSensor"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" />

        <Spinner
            android:id="@+id/SensorSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp" />
    </LinearLayout>

    <!--FROM selection -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btFromDate"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDate" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btFromHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btHour" />
    </LinearLayout>

    <!--TO selection -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/to" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btDate" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btToHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btHour" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btTimeRead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btGetRequest"
            android:onClick="read" />

    </LinearLayout>


</RelativeLayout>
