<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.francesco.myfirstapp.FragmentTimeRead">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="14dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/tvSelectMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <Spinner
                android:id="@+id/MeterSpinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="53dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/tvSelectSensor"
                android:layout_width="0dp"
                android:layout_weight="0.42"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <Spinner
                android:id="@+id/SensorSpinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="102dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="2" />

            <Button
                android:id="@+id/btFragFromDate"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btDate" />

            <Button
                android:layout_weight="1"
                android:id="@+id/btFromHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btHour" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/btTimeRead"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/search_button_states"
            android:src="@drawable/ic_search_white_48dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="31dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btTimeRead"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="69dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <Button
                android:layout_weight="1"
                android:id="@+id/btToDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btDate" />

            <Button
                android:layout_weight="1"
                android:id="@+id/btToHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btHour" />
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>
