<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.francesco.myfirstapp.ActivityLogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logopiccolo"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:text="User"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id = "@+id/EtUser"
            android:hint = "@string/loginEditUser"
            android:layout_width = "0dp"
            android:layout_weight="5"
            android:layout_height = "match_parent"
            android:focusable = "true"
            android:textColorHighlight = "@color/colorPrimary"
            android:textColorHint = "@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="Password"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/Etpassword"
            android:hint="@string/loginEditPassword"
            android:layout_width = "0dp"
            android:layout_weight="5"
            android:layout_height = "match_parent"
            android:inputType="textPassword"
            android:ems="10"
            android:textColorHighlight = "@color/colorPrimary"
            android:textColorHint = "@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <TextView
            android:text="Station"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <EditText
            android:id="@+id/EtStation"
            android:hint="@string/loginEditStation"
            android:layout_width = "0dp"
            android:layout_weight="5"
            android:layout_height = "match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColorHighlight = "@color/colorPrimary"
            android:textColorHint = "@color/colorAccent" />
    </LinearLayout>



    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btLogin"
        android:background="@drawable/action_button_selector"
        android:layout_marginLeft="14dp"
        android:layout_alignBaseline="@+id/btCancelLogin"
        android:layout_alignBottom="@+id/btCancelLogin"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="13dp" />

    <Button
        android:id="@+id/btCancelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btCancelLogin"
        android:background="@drawable/action_button_selector"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
